# os-simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ipc/: ipc.cpp  ipc.h
memory_manager/: main.cpp  memory_manager.cpp  memory_manager.h
scheduler/: main.cpp  scheduler.cpp  scheduler.h
storage/: main.cpp  storage.cpp  storage.h
sync/: semaphore.h
